--- a/app/index.html
+++ b/app/index.html
@@ -41,8 +41,10 @@
         <!-- Add your site or application content here -->
         <div ng-include="'views/main.html'" ng-controller="MainCtrl"></div>
 
-        <div class="footer">
-            Follow me on Github : <a href="https://github.com/maximelebreton">@maximelebreton</a>
+        <div class="footer small">
+            Follow me on Twitter : <a href="https://twitter.com/maximelebreton">@maximelebreton</a>
+
+            <div class="pull-right"><a href="https://github.com/maximelebreton/SpotiFIP/tree/gh-pages">SpotiFIP</a> on Github</div>
         </div>
     </div>
 
