--- a/app/index.html
+++ b/app/index.html
@@ -33,9 +33,11 @@
             <h3 class="text-muted">SpotiFIP</h3>
         </div>
 
-        <div class="jumbotron">
+        <div class="jumbotron" style="position:relative;">
           <h2>Récupérez les playlist Spotify de la radio FIP !</h2>
-          <p>Choisissez un jour, une heure, et c'est parti !</p>
+          <p>Choisissez un jour*, une heure, et c'est parti !</p>
+
+          <small style="font-size:9px; position: absolute; right: 1em; bottom: 1em;">*Limité aux 13 derniers jours</small>
         </div>
 
         <!-- Add your site or application content here -->
@@ -49,16 +51,16 @@
     </div>
 
 
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID 
+    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
      <script>
        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-       ga('create', 'UA-XXXXX-X');
+       ga('create', 'UA-1974322-3');
        ga('send', 'pageview');
-    </script>-->
+    </script>
 
     <!--[if lt IE 9]>
     <script src="bower_components/es5-shim/es5-shim.js"></script>
