some waiting messages...

--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title></title>
+    <title>SpotiFIP - Récupérez les playlist Spotify de radio FIP !</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -34,10 +34,10 @@
         </div>
 
         <div class="jumbotron" style="position:relative;">
-          <h2>Récupérez les playlist Spotify de la radio FIP !</h2>
+          <h2>Récupérez les playlist <span style="display: inline-block;"><img src="http://g.etfv.co/http://www.spotify.com" alt="" width="32" height="32">&nbsp;Spotify</span> de radio <span style="display: inline-block;"><img src="http://www.fipradio.fr/sites/all/themes/fip2/images/logo_121x121.png" alt="" width="32" height="32">&nbsp;<abbr title="France Inter Paris">FIP</abbr></span> !</h2>
           <p>Choisissez un jour*, une heure, et c'est parti !</p>
 
-          <small style="font-size:9px; position: absolute; right: 1em; bottom: 1em;">*Limité aux 13 derniers jours</small>
+          <small style="font-size:9px; position: absolute; right: 1em; bottom: 1em;">*Limité aux 14 derniers jours</small>
         </div>
 
         <!-- Add your site or application content here -->
