--- a/app/index.html
+++ b/app/index.html
@@ -11,7 +11,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>SpotiFIP - Récupérez les playlist Spotify de radio FIP !</title>
     <meta name="description" content="">
-    <meta name="viewport" content="width=device-width">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="mobile-web-app-capable" content="yes">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css styles/vendor.css -->
     <!-- bower:css -->
